@@ -831,6 +831,12 @@ OpenNMS as part of the post-install.
    <param name="castor.xsd.path" value="${root.source}/src/services/org/opennms/netmgt/config"/>
    <param name="castor.xsd" value="viewsdisplay.xsd"/>
   </antcall>  
+  <antcall target="castor">
+   <param name="castor.package" value="org.opennms.netmgt.config.webuiColors"/>
+   <param name="castor.output.path" value="${root.build}/castor"/>
+   <param name="castor.xsd.path" value="${root.source}/src/services/org/opennms/netmgt/config"/>
+   <param name="castor.xsd" value="webui-colors.xsd"/>
+  </antcall>
  </target>
 
  <!-- tests -->
