@@ -1,0 +1,5 @@
+<category-colors>
+    <green>green</green>
+    <yellow>#ffff33</yellow>
+    <red>#ff3333</red>
+</category-colors>
