@@ -240,6 +240,11 @@ public final class ConfigFileConstants
 	 */
 	public static final int THRESHOLDING_CONF_FILE_NAME;
 	
+	/**
+	 * This is the name of the path of the webui colors dtd
+	 */
+	public static final int WEBUI_COLORS_FILE_NAME;
+
 	//
 	// End other config files
 	//
@@ -359,10 +364,12 @@ public final class ConfigFileConstants
 		THRESHOLDING_CONF_FILE_NAME		= 42;
 		VIEWS_DISPLAY_CONF_FILE_NAME		= 43;
 		REPORT_HTML_XSL                         = 44;
+
+		WEBUI_COLORS_FILE_NAME                  = 45;
 		
 		// Allocate and build the mapping of identifiers to names
 		//
-		FILE_ID_TO_NAME = new String[45];
+		FILE_ID_TO_NAME = new String[46];
 
 		FILE_ID_TO_NAME[DB_CONFIG_FILE_NAME] 		= "opennms-database.xml";
 		FILE_ID_TO_NAME[JMS_CONFIG_FILE_NAME]		= "opennms-jms.xml";
@@ -420,6 +427,8 @@ public final class ConfigFileConstants
 
 		FILE_ID_TO_NAME[VULNSCAND_CONFIG_FILE_NAME]	= "vulnscand-configuration.xml";
 		FILE_ID_TO_NAME[VIEWS_DISPLAY_CONF_FILE_NAME]	= "viewsdisplay.xml";
+
+		FILE_ID_TO_NAME[WEBUI_COLORS_FILE_NAME]         = "webui-colors.xml";
 	}
 
 	/**
