@@ -1,5 +1,8 @@
 1.0.0 to 1.1.0
 ----------------------------------------------------------------------
+- Add a new XML file called webui-colors. Currently this only
+  allows one to set the colors for the categories display,
+  but this will grow to include all the colors in the Web UI.
 - Since the UEI is just a string, removed the "http://" and all
   references to "bluebird" in UEIs.
 - Disallowed spaces in Path names. Bug 657
